--- a/index.html
+++ b/index.html
@@ -15,36 +15,91 @@
     <link rel="stylesheet" href="./src/css/styles.css">
 </head>
 <body>
-    <main class="fundo">
-        <div class="container">
+    <main class="container">
+        <section class="grid">
 
-            <div class="dep1">
-                <div class="user">
-                    <img src="./src/images/image-daniel.jpg" alt="img daniel">
-                    <div class="login">
+            <div class="fundo-depoimento one">
+
+                <div class="info">
+                    <img src="./src/images/image-daniel.jpg" alt="Photo Daniel">
+
+                    <div class="username">
                         <p class="name">Daniel Clifford</p>
                         <p class="subname">Verified Graduate</p>
                     </div>
                 </div>
+
+                <h2 class="subtitle">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h2>
+
+                <p class="text">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
             </div>
 
-            <div class="dep2">
+            <div class="fundo-depoimento two">
 
+                <div class="info">
+                    <img src="./src/images/image-jonathan.jpg" alt="Photo Jonathan">
+
+                    <div class="username">
+                        <p class="name">Jonathan Walters</p>
+                        <p class="subname">Verified Graduate</p>
+                    </div>
+                </div>
+
+                <h2 class="subtitle">The team was very supportive and kept me motivated</h2>
+
+                <p class="text">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
             </div>
 
-            <div class="dep3">
+            <div class="fundo-depoimento three">
 
+                <div class="info">
+                    <img src="./src/images/image-jeanette.jpg" alt="Photo Jeanette">
+
+                    <div class="username">
+                        <p class="name">Jeanette Harmon</p>
+                        <p class="subname">Verified Graduate</p>
+                    </div>
+                </div>
+
+                <h2 class="subtitle">An overall wonderful and rewarding experience</h2>
+
+                <p class="text">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
             </div>
 
-            <div class="dep4">
+            <div class="fundo-depoimento four">
 
+                <div class="info">
+                    <img src="./src/images/image-patrick.jpg" alt="Photo Patrick">
+
+                    <div class="username">
+                        <p class="name">Patrick Abrams</p>
+                        <p class="subname">Verified Graduate</p>
+                    </div>
+                </div>
+
+                <h2 class="subtitle">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h2>
+
+                <p class="text">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
             </div>
 
-            <div class="dep5">
+            <div class="fundo-depoimento five">
 
+                <div class="info">
+                    <img src="./src/images/image-kira.jpg" alt="Photo Kira">
+
+                    <div class="username">
+                        <p class="name">Kira Whittle</p>
+                        <p class="subname">Verified Graduate</p>
+                    </div>
+                </div>
+
+                <h2 class="subtitle">Such a life-changing experience. Highly recommended!</h2>
+
+                <p class="text">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”</p>
             </div>
 
-        </div>
+
+        </section>
     </main>
 </body>
 </html>
